--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,9 +19,13 @@
 
 html {
   height: 100%;
+/* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: "PT Sans", sans-serif;
   font-size: 22px;
@@ -31,12 +35,12 @@ body {
   background-color: #ffffff;
 }
 
-page-container {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+.page-container {
   width: 1200px;
   min-height: 100%;
+  margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 /* СТРАНИЦЫ */
@@ -49,41 +53,6 @@ page-container {
 
 .main-index {
   text-align: center;
-}
-
-/* ОБЩИЕ СТИЛИ ДЛЯ КНОПОК */
-.button {
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: #82B3D3;
-  cursor: pointer;
-}
-
-.button:hover,
-.button:focus {
-  background-color: #68A2CA;
-}
-
-.button:active {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-/* СКРЫТЫЕ ЭЛЕМЕНТЫ */
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 /* ЗАГАЛОВКИ */
@@ -114,6 +83,68 @@ page-container {
   text-transform: capitalize;
 }
 
+/* СКРЫТЫЕ ЭЛЕМЕНТЫ */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* ОБЩИЕ СТИЛИ ДЛЯ КНОПОК */
+.button {
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #82B3D3;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #68A2CA;
+}
+
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/* ОБЩИЕ СТИЛИ ДЛЯ КНОПОК-ССЫЛОК */
+.button-link {
+  font-weight: 700;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #756157;
+  border-radius: 4px;
+}
+
+.button-link:hover,
+.button-link:focus {
+  background-color: #615048;
+}
+
+.button-link:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+/* ОБЩИЕ СТИЛИ ДЛЯ СЕЛЕКТОВ */
+.select-control {
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
 /* МЕНЮ НАВИГАЦИИ */
 .navigation {
   display: flex;
@@ -121,6 +152,7 @@ page-container {
 }
 
 .navigation-logo {
+  z-index: 1;
   position: relative;
   margin-left: 70px;
   margin-right: 30px;
@@ -146,7 +178,7 @@ page-container {
 .navigation-link {
   position: relative;
   display: block;
-  padding: 20px 17px;
+  padding: 21px 17px 18px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
@@ -160,8 +192,9 @@ page-container {
 }
 
 .current-site-page::before {
+  z-index: 1;
   position: absolute;
-  top: 65px;
+  top: 64px;
   right: 17px;
   left: 17px;
   border-bottom: 2px solid #756257;
@@ -183,7 +216,7 @@ page-container {
 .user-link {
   display: block;
   min-width: 42px;
-  min-height: 66px;
+  min-height: 65px;
   margin: 0;
   padding: 0;
 }
@@ -220,6 +253,18 @@ page-container {
   border-radius: 50%;;
 }
 
+.here {
+  display: block;
+  box-sizing: border-box;
+  width: 160px;
+  padding: 10px 15px 7px 15px;
+  margin: 0;
+  margin-right: 70px;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+}
+
 /* БЛОК ПРОМО */
 .promo {
   margin: 0;
@@ -233,8 +278,7 @@ page-container {
 
 .promo-image-container {
   position: relative;
-  z-index: -1;
-  margin-bottom: 63px;;
+  margin-bottom: 65px;
   background: #82B3D3 url("../images/background-promo.jpeg") no-repeat;
   background-size: 100% auto;
   min-height: 485px;
@@ -256,7 +300,8 @@ page-container {
 }
 
 .promo-text {
-  margin-bottom: 31px;
+  margin: 0;
+  margin-bottom: 30px;
   padding: 0;
 }
 
@@ -266,6 +311,12 @@ page-container {
   flex-direction: column;
   margin: 0;
   padding: 0;
+}
+
+.advantages-text {
+  margin: 0;
+  margin-bottom: 89px;
+  color: #333333;
 }
 
 .advantages-main-list {
@@ -308,7 +359,7 @@ page-container {
 }
 
 .advantage-container-sub .heading-small {
-  padding-top: 102px;
+  padding-top: 104px;
 }
 
 .icon-housing {
@@ -337,11 +388,6 @@ page-container {
 
 .blue-block-main {
   display: flex;
-}
-
-.advantages-text {
-  margin: 0;
-  margin-bottom: 90px;
 }
 
 .advantages-title {
@@ -377,13 +423,23 @@ page-container {
 }
 
 .hotel-search-title {
-  margin: 91px 0 29px 0;
+  margin: 92px 0 29px 0;
 }
 
 .hotel-search-text {
   margin: 0;
-  margin-bottom: 56px;
+  margin-bottom: 55px;
   padding: 0;
+  color: #333333;
+}
+
+.search {
+  display: block;
+  width: 544px;
+  margin-bottom: 93px;
+  padding: 12px 15px;
+  font-size: 20px;
+  line-height: 36px;
 }
 
 /* БЛОК ПОДПИСКИ */
@@ -401,12 +457,12 @@ page-container {
 }
 
 .subscription-title {
-  margin: 94px 0 29px 0;
+  margin: 96px 0 28px 0;
 }
 
 .subscription-description {
   margin: 0;
-  margin-bottom: 46px;
+  margin-bottom: 45px;
   padding: 0;
 }
 
@@ -416,9 +472,9 @@ page-container {
 }
 
 .subscription-input {
-  width: 580px;
-  min-height: 58px;
-  padding-left: 20px;
+  width: 578px;
+  min-height: 57px;
+  padding: 0 3px 0 22px;
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
@@ -439,7 +495,7 @@ page-container {
 /* ПОДВАЛ */
 .page-footer {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   min-height: 120px;
 }
@@ -448,7 +504,7 @@ page-container {
   display: flex;
   flex-wrap: wrap;
   width: 150px;
-  margin: 45px 0 35px 70px;
+  margin: 45px 229px 35px 70px;
   padding: 0;
   list-style-type: none;
 }
@@ -485,7 +541,7 @@ page-container {
 
 .phone {
   display: block;
-  margin: 45px 0 35px 0;
+  margin: 47px 235px 33px 0;
   font-size: 40px;
   line-height: 40px;
   font-weight: 400;
@@ -496,7 +552,7 @@ page-container {
 }
 
 .footer-htmlacademy-link {
-  margin: 45px 70px 35px 0;
+  margin: 47px 70px 33px 0;
 }
 
 .footer-htmlacademy-link:hover,
@@ -535,7 +591,7 @@ page-container {
 .modal-close {
   position: absolute;
   padding: 0;
-  top: 54px;
+  top: 60px;
   right: 70px;
   width: 53px;
   height: 53px;
@@ -598,7 +654,7 @@ page-container {
   grid-template-columns: 288px 230px;
   column-gap: 56px;
   min-height: 50px;
-  margin-bottom: 29px;
+  margin-bottom: 40px;
 }
 
 .child-label-wrapper {
@@ -641,8 +697,7 @@ page-container {
 .label-date-from::before,
 .label-date-to::before {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 18px;
   right: 19px;
   display: block;
   width: 17px;
@@ -656,7 +711,7 @@ page-container {
 .input-date-from,
 .input-date-to {
   width: 401px;
-  min-height: 50px;
+  height: 50px;
   padding: 0;
   padding-left: 19px;
   font-family: inherit;
@@ -719,12 +774,6 @@ page-container {
   opacity: 0.6;
 }
 
-/* УБИРАЕТ ИКОНКИ В ИНПУТЕ ПРИ ТИПЕ - ДАТА
-.input-date-from::-webkit-calendar-picker-indicator,
-.input-date-to::-webkit-calendar-picker-indicator {
-  opacity: 0;
-} */
-
 .input-adult-amount::-webkit-outer-spin-button,
 .input-adult-amount::-webkit-inner-spin-button,
 .input-child-amount::-webkit-outer-spin-button,
@@ -762,9 +811,9 @@ page-container {
   transform: translateY(-50%);
   display: flex;
   align-items: center;
-  width: 51px;
+  width: 32px;
   min-height: 50px;
-  padding: 0 19px;
+  padding: 0;
   cursor: pointer;
   color: #000000;
   opacity: 0.3;
@@ -773,11 +822,13 @@ page-container {
 }
 
 .amount-less {
+  padding-left: 19px;
   left: 0;
 }
 
 .amount-more {
   right: 0;
+  padding-right: 19px;
 }
 
 .amount-less:hover,
@@ -895,33 +946,32 @@ page-container {
 }
 
 /* ХЛЕБНЫЕ КРОШКИ */
-.main-inner-header {
-  margin: 30px 70px 40px 70px;
-}
-
 .main-inner-title {
+  padding-top: 35px;
   margin-bottom: 10px;
+  text-transform: none;
 }
 
-.breadcrumps-list {
+.breadcrumbs-list {
   display: flex;
   align-items: center;
   margin: 0;
+  margin-bottom: 40px;
   padding: 0;
   font-size: 16px;
   line-height: 21px;
   list-style-type: none;
 }
 
-.breadcrumps-item {
+.breadcrumbs-item {
   margin-right: 25px;
 }
 
-.breadcrumps-item:not(:last-child) {
+.breadcrumbs-item:not(:last-child) {
   position: relative;
 }
 
-.breadcrumps-item:not(:last-child)::after {
+.breadcrumbs-item:not(:last-child)::after {
   content: "";
   display: block;
   position: absolute;
@@ -929,7 +979,7 @@ page-container {
   right: -18px;
   width: 8px;
   height: 8px;
-  background-image: url('../images/icon/icon-breadcrump-arrow.svg');
+  background-image: url('../images/icon/icon-breadcrumb-arrow.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -941,26 +991,26 @@ page-container {
   fill: #ffffff;
 }
 
-.breadcrumps-link:hover {
+.breadcrumbs-item:not(.breadcrumbs-current) .breadcrumbs-link:hover {
   color: rgba(255, 255, 255, 0.6);
   fill: rgba(255, 255, 255, 0.6);
 }
 
-.breadcrumps-link:active {
+.breadcrumbs-item:not(.breadcrumbs-current) .breadcrumbs-link:active {
   color: rgba(255, 255, 255, 0.3);
   fill: rgba(255, 255, 255, 0.3);
 }
 
 /* ФИЛЬТРАЦИЯ КАТАЛОГА ГОСТИНИЦ */
-.head-inner-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.main-inner-header {
   min-height: 403px;
-  text-transform: capitalize;
   color: #ffffff;
   background: #82B3D3 url("../images/background-catalog.jpeg") no-repeat;
   background-size: 100% auto;
+}
+
+.main-inner-header-wrapper {
+  margin: 0 70px 55px 70px;
 }
 
 .catalog-filter {
@@ -968,6 +1018,7 @@ page-container {
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  min-height: 149px;
 }
 
 .catalog-filter-group {
@@ -982,28 +1033,35 @@ page-container {
   list-style-type: none;
 }
 
+.catalog-filter-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
 .catalog-filter-title {
   padding: 0;
-  margin-bottom: 34px;
+  margin-bottom: 30px;
   font-size: 20px;
   line-height: 26px;
   font-weight: 700;
+  text-transform: capitalize;
 }
 
 .hotel-filter {
-  margin: 0 70px 70px 70px;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
 }
 
-.filter-left,
-.filter-right {
+.filter-left {
   display: flex;
+  justify-content: space-between;
+  min-width: 365px;
 }
 
-.group-infrastructure {
-  margin-right: 70px;
+.filter-right {
+  display: flex;
+  justify-content: space-between;
+  min-width: 519px;
 }
 
 .control-mark {
@@ -1018,10 +1076,6 @@ page-container {
 
 .control {
   position: relative;
-}
-
-.control-input {
-  margin: 0 19px 15px 0;
 }
 
 .control-input[type="checkbox"]:checked + .control-mark::before {
@@ -1049,15 +1103,19 @@ page-container {
   border-radius: 50%;
 }
 
+.control-label {
+  padding-left: 39px;
+}
+
 .group-price {
   padding: 0;
   margin: 0;
-  margin-right: 70px;
 }
 
 .price-form {
   display: flex;
-  margin-bottom: 32px;
+  margin-top: 4px;
+  margin-bottom: 28px;
 }
 
 .input-price {
@@ -1130,7 +1188,6 @@ page-container {
 .range-scale {
   position: relative;
   height: 4px;
-  margin-bottom: 10px;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -1165,7 +1222,7 @@ page-container {
 .group-buttons {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 0;
   margin: 0;
 }
@@ -1173,8 +1230,7 @@ page-container {
 .submit {
   width: 160px;
   min-height: 48px;
-  margin-top: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   padding: 14px 35px;
   border: none;
   border-radius: 4px;
@@ -1198,19 +1254,35 @@ page-container {
   justify-content: space-between;
   align-items: center;
   min-height: 50px;
-  margin: 50px 72px 56px 72px;
+  margin: 55px 72px 53px 72px;
   padding: 0;
 }
 
 .search-result {
   margin: 0;
-  margin-right: 191px;
+  margin-top: 3px;
+  margin-right: 193px;
   padding: 0;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
   color: #000000;
+}
+
+.sort-by-price {
+  position: relative;
+  width: 290px;
+  min-height: 49px;
+  margin-right: 76px;
+  padding-top: 2px;
+  padding-left: 18px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  appearance: none;
+  background-image: url('../images/select-arrow.svg');
+  background-repeat: no-repeat;
+  background-position: right 20px center;
 }
 
 .view-control-list {
@@ -1240,6 +1312,28 @@ page-container {
   background-image: url('../images/icon/icon-list.svg');
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.button-view {
+  display: block;
+  min-width: 44px;
+  min-height: 44px;
+  margin: 0;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.button-view:hover,
+.button-view:active {
+  border: 2px solid #000000;
+}
+
+.button-view:focus {
+  border: 2px solid #68A2CA;
+}
+
+.view-current {
+  border: 2px solid #000000;
 }
 
 /* КАТАЛОГ ГОСТИНИЦ */
@@ -1304,6 +1398,31 @@ page-container {
   border-radius: 4px;
 }
 
+.add {
+  background-color: #7DB54F;
+}
+
+.add:hover,
+.add:focus {
+  background-color: #6C9E42;
+}
+
+.add:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-rating {
+  margin: 0;
+  padding: 9px 22px 8px 22px ;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+}
+
+/* РЕЙТИНГ В ЗВЕЗДАХ */
 .hotel-stars {
   display: flex;
   align-items: center;
@@ -1319,15 +1438,49 @@ page-container {
   background-position: center;
 }
 
-.hotel-rating {
-  margin: 0;
-  padding: 9px 22px 8px 22px ;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: #F2F2F2;
-  border-radius: 4px;
+.stars-1 {
+  background-image:
+    url("../images/icon/icon-star.svg");
+  background-repeat: no-repeat;
+  background-position: 0;
+}
+
+.stars-2 {
+  background-image:
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg");
+  background-repeat: no-repeat;
+  background-position: 0, 24px;
+}
+
+.stars-3 {
+  background-image:
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg");
+  background-repeat: no-repeat;
+  background-position: 0, 24px, 48px;
+}
+
+.stars-4 {
+  background-image:
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg");
+  background-repeat: no-repeat;
+  background-position: 0, 24px, 48px, 72px;
+}
+
+.stars-5 {
+  background-image:
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg"),
+    url("../images/icon/icon-star.svg");
+  background-repeat: no-repeat;
+  background-position: 0, 24px, 48px, 72px, 96px;
 }
 
 /* ПАГИНАЦИЯ */
@@ -1397,115 +1550,12 @@ page-container {
 
 }
 
-.label-amount {
-  margin-right: 51px;
-  width: 160px;
-  height: 49px;
-}
-
-/* КНОПКИ */
-.add {
-  background-color: #7DB54F;
-}
-
-.add:hover,
-.add:focus {
-  background-color: #6C9E42;
-}
-
-.add:active {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.button-view {
-  display: block;
-  min-width: 44px;
-  min-height: 44px;
-  margin: 0;
-  border: 2px solid #E5E5E5;
-  border-radius: 4px;
-}
-
-.button-view:hover,
-.button-view:active {
-  border: 2px solid #000000;
-}
-
-.button-view:focus {
-  border: 2px solid #68A2CA;
-}
-
-.view-current {
-  border: 2px solid #000000;
-}
-
-/* КНОПКИ-ССЫЛКИ */
-.button-link {
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #756157;
-  border-radius: 4px;
-}
-
-.button-link:hover,
-.button-link:focus {
-  background-color: #615048;
-}
-
-.button-link:active {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.here {
-  display: block;
-  box-sizing: border-box;
-  width: 160px;
-  padding: 9px 15px 8px 15px;
-  margin: 0;
-  margin-right: 70px;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-}
-
-.search {
-  display: block;
-  width: 544px;
-  margin-bottom: 93px;
-  padding: 12px 15px;
-  font-size: 20px;
-  line-height: 36px;
-}
-
-/* СЕЛЕКТЫ */
-.select-control {
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 21px;
-  font-weight: 400;
-}
-
-.sort-by-price {
-  position: relative;
-  width: 290px;
-  min-height: 49px;
-  margin-right: 78px;
-  padding-left: 20px;
-  border: 2px solid #E5E5E5;
-  border-radius: 4px;
-  appearance: none;
-  background-image: url('../images/select-arrow.svg');
-  background-repeat: no-repeat;
-  background-position: right 20px center;
-}
-
 .label-amount-cards {
   margin-right: 51px;
   font-size: 18px;
   line-height: 21px;
   font-weight: 400;
+  color: #333333;
 }
 
 .amount-cards {
